test/langtools/tools/javac/records/mandated_members/UserDefinedAccessorsMustBePublic.out
UserDefinedAccessorsMustBePublic.java:8:9: compiler.err.method.must.be.public: i
1 error
